Ui Rebuild (#199)
* Cleanup

* Build auth provider

* Implement discord login

* Add jwt service + add liquibase

* :hammer: Add jwt filter

* :hammer: Update user info in db on login

* :hammer: Add swagger

* :hammer: Add dev container

* :hammer: Add dev container

* :hammer: Fix changelog ?

* :hammer: Fix openApi

* :hammer: Add guildcontroller with getMutualGuilds

* :hammer: Change multual guilds url

* :hammer: Add invite link api

* :hammer: migrate env to config prop

* :lock: Add security expression for guild

* :lock: Add dev mode to auth

* :hammer: Add textchannel and voicechannel endpoint

* :hammer: Add setting description endpoint

* :hammer: Add getRole endpoint

* :hammer: Return only visible voice/text channels

* :hammer: Add value endpoint

* :robot: Change ci

* :hammer: Add canManage to guild list

* :ambulance: Load user of guild on load + fetch on api call for mutuals guilds

* :ambulance: Fix auto_voice_channel_title type

* :ambulance: Fix swagger url

* :ambulance: Fix setting type

* :hammer: Add setting post

* Fix blanck string in db

* :hammer: Add music status api enpoint

* :ambulance: Fix permission

* :hammer: Change interact condition

* :hammer: Add connect api command

* :hammer: Add disconnect endpoint

* :hammer: Audio refracto

* :hammer: Big refracto

* :hammer: Refracto libs

* :hammer: Rebuild http request with new client

* :hammer: Refracto + add skip, pause, resume, stop endpoint

* :hammer: Add endpoint

* :ambulance: Fix permission

* Update build.yml

* Update plugin org.liquibase.gradle to v2.1.1 [skip ci] (#186)

Co-authored-by: renovate[bot] <29139614+renovate[bot]@users.noreply.github.com>

* Update plugin nebula.lint to v16.26.0 [skip ci] (#185)

Co-authored-by: renovate[bot] <29139614+renovate[bot]@users.noreply.github.com>

* Update dependency org.liquibase:liquibase-core to v4.12.0 [skip ci] (#184)

Co-authored-b